# scrapbook-chess

./: .gitignore  ACHIEVEMENTS.md  ACKNOWLEDGMENTS.md  ARCHITECTURE.md  IDEAS.md  README.md  analyzed.pgn  main.py  pyproject.toml
data/: badges.json  mastery.json  schema.sql
data/achievements/: badges_evaluation.yml  badges_hybrid.yml  badges_meta.yml  badges_position.yml  feats.json  story.json
data/achievements/badges/domination/: body_count.yml
data/achievements/badges/veterancy/: mileage.yml
design/: achievement_ideas.md  achievements.md  badges.md  engines.md  quote_ideas.md
experiments/: stockfish.py
scripts/: README.md  lichess_api.py  reset_data.py  reset_db.py
src/: config.py  display.py  orchestrator.py  update.py
src/achievements/: engine.py  metrics.py  patterns.py  scanner.py
src/achievments/: engine.py  metrics.py  scanner.py
src/analysis/: annotation_service.py  engine_runner.py  engine_service.py  stockfish_analyzer.py
src/database/: achievements_db.py  connection.py  ingest_games.py  initialize.py  ledger.py  seed_achievements.py
src/scrapbook_chess/: __init__.py  config.py  display.py  main.py  orchestrator.py
src/scrapbook_chess/achievements/: __init__.py  metrics.py  patterns.py  scanner.py
src/scrapbook_chess/analysis/: __init__.py  annotation_service.py  engine_service.py
src/scrapbook_chess/database/: __init__.py  connection.py  ingest_games.py  initialize.py  ledger.py  seed_achievements.py
tests/: test_metrics.py
