[project]
name = "chess-achievement-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.3.4",
    "python-chess>=1.999",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]

[tool.black]
line-length = 80 # Google Python Style Guide recommendation
target-version = ["py312"]