[project]
name = "scrapbook-chess"
version = "0.1.0"
description = "A gamified personal scrapbook for tracing chess milestones and breakthroughs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.3.4",
    "python-chess>=1.999",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
scrapbook-chess = "scrapbook_chess.main:main"

[tool.ruff.lint]
# "E" and "F" are standard PEP8 checks, "I" automatically sorts your imports (replacing isort)
select = ["E", "F", "I"]